
Legend:

+ = Added
* = Changed
- = Removed
! = Fixed

v1.22 (2016-08-01)
	+ experimental postbox support (https://www.postbox-inc.com)
	+ experimental e10s support
	* collapsed by default changes of old versions in changes log (controlled via options menu at changes log page)
	! possible errors related to changes log
	! changes log link in about addon window would not always work
	! issue #89 (Tab preview still show content when window locked on Windows 10 (8?))

v1.21.6 (2016-03-20)
	! issue #88 (Unable change or delete master password) for real this time. Somehow the fixed file never got into the package in last version.
	! issue #89 (Windows 10(8?) - (Tab preview still shows content when window is locked on Windows 10 (8?))

v1.21.5 (2016-03-17)
	! issue #88 (Unable change or delete master password)

v1.21.4 (2016-03-16)
	* different approach to show MP prompt on startup
	* dropped support for FF <4.0 and TB <5.0
	! timer didn't show more then 24 hours
	! DOM Inspector window would not get locked
	! missing options on FF29+
	! issue #85 (Saved passwords list is empty)
	! password prompt missing custom title and options button
	! FF/TB 48 compatibility

v1.21.3 (2014-10-12)
	* flashing for a split a second prompt window is now less intrusive if visible at all.
	! FF/TB 35 compatibility

v1.21.2 (2013-03-23)
	+ hidden option extensions.masterPasswordPlus.lockignorefirstkey, that controls when pressing a key on locked window: should it be passed to the MP prompt or not (controls a feature introduced in v1.20)
	+ in Firefox/Thunderbird 8.0+ a link at General tab in options window to open all available settings
	+ prompt to delete all settings when uninstalling MP+
	! ignored forceprompt setting
	! in some situations MP+ doesn't work in new windows
	! error in console on non Vista/W7/W8 systems

v1.21.1 (2013-03-08)
	+ extensions.masterPasswordPlus.forceprompt setting (for advanced users). Users can now add windows to the list that require MP login.