@@ -2,7 +2,6 @@
 
 <overlay id="masterPasswordPlusPasswordManagerOverlay" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
 	<window id="SignonViewerDialog">
-		<script type="application/javascript" src="chrome://mapaplus/content/masterpasswordplusCommon.js"/>
 		<script type="application/javascript" src="chrome://mapaplus/content/passwordManager.js"/>
 	</window>
 </overlay>
